Fix overlapping footer in the question pages and link the back button on president question page to the index.html page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ footer {
     background: #1e272e;
     text-align: center;
     padding: 25px;
-    position: absolute;
+    position: fixed;
     left: 0;
     bottom: 0;
     height: 100px;
@@ -54,60 +54,11 @@ footer {
     /*height:250px;*/
 }
 
-/* (B) Question*/
-#quizQn {
-    padding: 45px;
-    background: #1e272e;
-    color: #fff;
-    font-size: 24px;
-    border-radius: 10px;
-}
-
-/* (C) Answers*/
-#quizAns {
-    margin: 30px 0;
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-gap: 20px;
-}
-
-#quizAns input[type=radio] {
-    display: none;
-}
-
-#quizAns label {
-    background: #fafafa;
-    border: 1px solid #eee;
-    border-radius: 10px;
-    padding: 25px;
-    font-size: 20px;
-    cursor: pointer;
-    text-align: left;
-}
-
-#quizAns label.correct {
-    background: #d8ffc4;
-    border: 1px solid #60a03f;
-}
-
-#quizAns label.wrong {
-    background: #ffe8e8;
-    border: 1px solid #c78181;
-}
-
 #hero-img {
-    width: 40%;
-    margin: 5% 30% 1% 30%;
-    height: 350px;
-}
-
-/*
-#gameover-img {
     width: 50%;
-    margin: 0% 25% 0% 25%;
-    height: 350px;
+    margin: 5% 30% 1% 30%;
+    height: 250px;
 }
-*/
 
 /* (D) the body does not require much*/
 html,
@@ -162,29 +113,39 @@ table {
 @media screen and (max-width: 768px) {
     input {
         margin: 1% 2%;
+        margin-left: 0;
         width: 100%;
         padding: 25px;
     }
 
     table {
-        width: 95%;
-        margin: 2%;
+        margin: 0;
+        width: 100%;
         table-layout: fixed;
+    }
+
+    h2 {
+        margin-top: 10%;
     }
 }
 
 @media screen and (max-width: 600px) {
     input {
         margin: 1% 2%;
+        margin-left: 0;
         width: 100%;
         padding: 25px;
         text-align: left;
     }
 
     table {
-        width: 95%;
-        margin: 2%;
+        margin: 0;
+        width: 100%;
         text-align: left;
         table-layout: fixed;
+    }
+
+    h2 {
+        margin-top: 10%;
     }
 }
